# metafile-sdk-py

./: .gitignore  Makefile  README.md  pyproject.toml  requirement.txt  setup.cfg
src/metafile_sdk/: __init__.py  hash_func.py  metafile.py  orm.py  transaction.py  utils.py
src/metafile_sdk/api/: __init__.py  api_base.py  metafile.py  metasv.py  sensible_query.py  showmandb.py  woc.py
src/metafile_sdk/bitsv/: __init__.py  base58.py  cli.py  format.py  keygen.py  transaction.py  wallet.py
src/metafile_sdk/bitsv/network/: rates.py  transaction.py
src/metafile_sdk/bitsv/network/services/: __init__.py  bsvbookguarda.py  fullnode.py  mattercloud.py  network.py  whatsonchain.py
src/metafile_sdk/model/: base.py
